# SDL3CPP

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
code/examples/: CMakeLists.txt
code/examples/Tutorial_01_Hello-SDL/: CMakeLists.txt
code/examples/Tutorial_01_Hello-SDL/src/: main.cpp
code/examples/Tutorial_02_Gettingan-Image-on-the-Screen/: CMakeLists.txt
code/examples/Tutorial_02_Gettingan-Image-on-the-Screen/include/: App.h
code/examples/Tutorial_02_Gettingan-Image-on-the-Screen/src/: App.cpp  main.cpp
code/examples/Tutorial_03_Event-Driven-Programming/: CMakeLists.txt
code/examples/Tutorial_03_Event-Driven-Programming/include/: App.h
code/examples/Tutorial_03_Event-Driven-Programming/src/: App.cpp  main.cpp
code/examples/Tutorial_04_Key-Presses/: CMakeLists.txt
code/examples/Tutorial_04_Key-Presses/include/: App.h
code/examples/Tutorial_04_Key-Presses/src/: App.cpp  main.cpp
code/examples/Tutorial_05_Optimized-Surface-Loading-and-Soft-Stretching/: CMakeLists.txt
code/examples/Tutorial_05_Optimized-Surface-Loading-and-Soft-Stretching/src/: App.cpp  main.cpp
code/examples/Tutorial_06_Extension-Libraries-and-Loading-Other-Image-Formats/: CMakeLists.txt
code/examples/Tutorial_06_Extension-Libraries-and-Loading-Other-Image-Formats/include/: App.h
code/examples/Tutorial_06_Extension-Libraries-and-Loading-Other-Image-Formats/src/: App.cpp
code/examples/Tutorial_07_Texture-Loading-and-Rendering/: CMakeLists.txt
code/examples/Tutorial_07_Texture-Loading-and-Rendering/src/: App.cpp
code/examples/Tutorial_08_Geometry-Rendering/: CMakeLists.txt
code/examples/Tutorial_08_Geometry-Rendering/include/: App.h
code/examples/Tutorial_08_Geometry-Rendering/src/: App.cpp
code/examples/Tutorial_09_The-viewport/: CMakeLists.txt
code/examples/Tutorial_09_The-viewport/include/: App.h
code/examples/Tutorial_09_The-viewport/src/: App.cpp  main.cpp
code/examples/Tutorial_10_Color-keying/: CMakeLists.txt
code/examples/Tutorial_10_Color-keying/include/: App.h
code/examples/Tutorial_10_Color-keying/src/: App.cpp
code/examples/Tutorial_11_Clip-rendering-and-sprite-sheets/: CMakeLists.txt
code/examples/Tutorial_11_Clip-rendering-and-sprite-sheets/include/: App.h
code/examples/Tutorial_11_Clip-rendering-and-sprite-sheets/src/: App.cpp
code/examples/Tutorial_12_Color-modulation/: CMakeLists.txt
code/examples/Tutorial_12_Color-modulation/include/: App.h
code/examples/Tutorial_12_Color-modulation/src/: App.cpp  main.cpp
code/examples/Tutorial_13_Alpha-blending/: CMakeLists.txt
code/examples/Tutorial_13_Alpha-blending/include/: App.h
code/examples/Tutorial_13_Alpha-blending/src/: App.cpp  main.cpp
code/examples/Tutorial_14_Animated-sprites-and-vsync/: CMakeLists.txt
code/examples/Tutorial_14_Animated-sprites-and-vsync/include/: App.h
code/examples/Tutorial_14_Animated-sprites-and-vsync/src/: App.cpp  main.cpp
code/examples/Tutorial_15_Rotation-and-flipping/: CMakeLists.txt
code/examples/Tutorial_15_Rotation-and-flipping/include/: App.h
code/examples/Tutorial_15_Rotation-and-flipping/src/: App.cpp  main.cpp
code/examples/Tutorial_16_True-type-fonts/: CMakeLists.txt
code/examples/Tutorial_16_True-type-fonts/include/: App.h
code/examples/Tutorial_16_True-type-fonts/src/: App.cpp
code/examples/Tutorial_17_Mouse-events/: CMakeLists.txt
code/examples/Tutorial_17_Mouse-events/include/: App.h
code/examples/Tutorial_17_Mouse-events/src/: App.cpp  main.cpp
code/examples/Tutorial_18_Key-states/: CMakeLists.txt
code/examples/Tutorial_18_Key-states/include/: App.h
code/examples/Tutorial_18_Key-states/src/: App.cpp  main.cpp
code/examples/Tutorial_21_Sound-effects-and-music/: CMakeLists.txt
code/examples/Tutorial_21_Sound-effects-and-music/include/: App.h
code/libraries/: CMakeLists.txt
code/libraries/SDL3CPP/: CMakeLists.txt
code/libraries/SDL3CPP/src/: AudioStream.cpp  (+19 more)
code/libraries/SDLWindows/: CMakeLists.txt
code/libraries/core/: CMakeLists.txt
code/libraries/filesystem/: CMakeLists.txt
code/libraries/osal/: CMakeLists.txt
code/libraries/serialization/: CMakeLists.txt
code/libraries/test-platform/: CMakeLists.txt
code/libraries/tracing/: CMakeLists.txt
code/libraries/utility/: CMakeLists.txt
tutorials_original/: CMakeLists.txt
tutorials_original/02_getting_an_image_on_the_screen/: 02_getting_an_image_on_the_screen.cpp  CMakeLists.txt
tutorials_original/03_event_driven_programming/: 03_event_driven_programming.cpp  CMakeLists.txt
tutorials_original/04_key_presses/: 04_key_presses.cpp  CMakeLists.txt
tutorials_original/05_optimized_surface_loading_and_soft_stretching/: 05_optimized_surface_loading_and_soft_stretching.cpp  CMakeLists.txt
tutorials_original/07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp  CMakeLists.txt
tutorials_original/08_geometry_rendering/: 08_geometry_rendering.cpp  CMakeLists.txt
tutorials_original/09_the_viewport/: 09_the_viewport.cpp  CMakeLists.txt
tutorials_original/10_color_keying/: 10_color_keying.cpp  CMakeLists.txt
tutorials_original/11_clip_rendering_and_sprite_sheets/: 11_clip_rendering_and_sprite_sheets.cpp  CMakeLists.txt
tutorials_original/12_color_modulation/: 12_color_modulation.cpp  CMakeLists.txt
tutorials_original/13_alpha_blending/: 13_alpha_blending.cpp  CMakeLists.txt
tutorials_original/14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp  CMakeLists.txt
tutorials_original/15_rotation_and_flipping/: 15_rotation_and_flipping.cpp  CMakeLists.txt
tutorials_original/16_true_type_fonts/: 16_true_type_fonts.cpp  CMakeLists.txt
tutorials_original/17_mouse_events/: 17_mouse_events.cpp  CMakeLists.txt
tutorials_original/18_key_states/: 18_key_states.cpp  CMakeLists.txt  readme.txt
tutorials_original/19_gamepads_and_joysticks/: 19_gamepads_and_joysticks.cpp  CMakeLists.txt
tutorials_original/20_force_feedback/: 20_force_feedback.cpp  CMakeLists.txt  readme.txt
tutorials_original/21_sound_effects_and_music/: 21_sound_effects_and_music.cpp  CMakeLists.txt  readme.txt
(+290 files in other folders)
