message(STATUS "\n**********************************************************************************\n")
message(STATUS "\n## In directory: ${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(02_getting_an_image_on_the_screen)
add_subdirectory(03_event_driven_programming)
add_subdirectory(04_key_presses)
add_subdirectory(05_optimized_surface_loading_and_soft_stretching)
add_subdirectory(07_texture_loading_and_rendering)
add_subdirectory(08_geometry_rendering)
add_subdirectory(09_the_viewport)
add_subdirectory(10_color_keying)
add_subdirectory(11_clip_rendering_and_sprite_sheets)
add_subdirectory(12_color_modulation)
add_subdirectory(13_alpha_blending)
add_subdirectory(14_animated_sprites_and_vsync)
add_subdirectory(15_rotation_and_flipping)
add_subdirectory(16_true_type_fonts)
add_subdirectory(17_mouse_events)
add_subdirectory(18_key_states)
add_subdirectory(19_gamepads_and_joysticks)
add_subdirectory(20_force_feedback)
add_subdirectory(21_sound_effects_and_music)
