message(STATUS "\n**********************************************************************************\n")
message(STATUS "\n## In directory: ${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(Tutorial_01_Hello-SDL)
add_subdirectory(Tutorial_02_Gettingan-Image-on-the-Screen)
add_subdirectory(Tutorial_03_Event-Driven-Programming)
add_subdirectory(Tutorial_04_Key-Presses)
add_subdirectory(Tutorial_05_Optimized-Surface-Loading-and-Soft-Stretching)
add_subdirectory(Tutorial_06_Extension-Libraries-and-Loading-Other-Image-Formats)
add_subdirectory(Tutorial_07_Texture-Loading-and-Rendering)
add_subdirectory(Tutorial_08_Geometry-Rendering)
add_subdirectory(Tutorial_09_The-viewport)
add_subdirectory(Tutorial_10_Color-keying)
add_subdirectory(Tutorial_11_Clip-rendering-and-sprite-sheets)
add_subdirectory(Tutorial_12_Color-modulation)
add_subdirectory(Tutorial_13_Alpha-blending)
add_subdirectory(Tutorial_14_Animated-sprites-and-vsync)
add_subdirectory(Tutorial_15_Rotation-and-flipping)
add_subdirectory(Tutorial_16_True-type-fonts)
add_subdirectory(Tutorial_17_Mouse-events)
add_subdirectory(Tutorial_18_Key-states)
add_subdirectory(Tutorial_21_Sound-effects-and-music)
